--- a/pom.xml
+++ b/pom.xml
@@ -58,6 +58,13 @@
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-devtools</artifactId>
+            <!-- Marking it as true, makes it a dev dependency -->
+            <optional>true</optional>
+        </dependency>
     </dependencies>
 
     <build>
